Fixed flag vertical alignment

--- a/src/components/home/StockMarket.scss
+++ b/src/components/home/StockMarket.scss
@@ -17,12 +17,14 @@
         font-weight: normal;
       }
       p {
+        display: flex;
         align-self: center;
         font-size: 14px;
         font-weight: bold;
         img {
+          align-self: center;
           height: 1.2rem;
-          padding-right: 10px;
+          margin-right: 10px;
         }
         &:first-child {
           text-align: left;
